--- a/Conflict Tool/bin/.gitignore
+++ b/Conflict Tool/bin/.gitignore
@@ -1,3 +1,6 @@
 /ConflictGUI.class
 /conflictToolGUI.class
 /textConstraints.txt
+/SchedulingGUI.class
+/SchedulingTool.class
+/SchedulingToolPanel.class
